tests/diagnostics/catalog/snapshots/ir/IR0035.snap
error[IR0035]: IR_E_INVALID_INDEX
 --> tests/diagnostics/catalog/sources/ir/IR0035.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0035
  = help: keep IR validation diagnostics structured and catalog-backed
